<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edNameArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/app_dialog_add_name_article"
        android:inputType="text"
        android:textColor="@color/app_text_color"
        android:textColorHint="@color/app_text_disabled_color" />

    <EditText
        android:id="@+id/edKeyArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/app_dialog_add_key_article"
        android:inputType="text"
        android:textColor="@color/app_text_color"
        android:textColorHint="@color/app_text_disabled_color" />


    <Spinner
        android:id="@+id/spCatArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_dialog_add_price_article"/>

        <!-- Un botón para agregar campos de precio dinámicamente -->
        <Button
            android:id="@+id/btnAddPrice"
            style="?attr/materialIconButtonFilledStyle"
            app:icon="@drawable/add_ic"
            android:backgroundTint="@color/app_text_disabled_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <!-- Un contenedor para los campos de precio -->
    <LinearLayout
        android:id="@+id/layoutPrices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnAddArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_dialog_add_category_button"
        android:textAllCaps="true"
        android:backgroundTint="@color/app_accent_color"/>

</androidx.appcompat.widget.LinearLayoutCompat>